2003-07-01  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * gdcmPython/Makefile.am now avoids calling the wrappers for the
        clean target.
      * src/gdcm*.[cxx|h] :
        - to allow compilation with gcc 3.x
          -- clean up of STL usage (added explicit usage of std::)
          -- small fixes on exceptions.
          Note: linking not tested !
        - clean of doxygen comments to avoid warnings at documentation
          building stage.
      * vtk/vtkGdcmReader.cxx: g++ warning message clean up (platform
        dependent convertion).

2003-06-20  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * Clean up of previous JPR garbage commit (not even commented in the
        Changelog):
        - Test/Makefile.am removed the reference to unexisting testTS.cxx
        - moved all jpeg related files from src to src/jpeg/libijg8, with
          addition/modification of Makefile.am and configure.in.
        - the testSuite is still brain damage (not guilty).

2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * WrapVTK.py : modifications to get correctly vtk source files to 
        compile
      * vtk/vtkGdcmReader.cxx : modification for an already existing name
        (FileName -> Filename)

2003-06-11  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader.[cxx/h]:
        - UpdateProgress method should now be effective
        - removed the limitation on having only images loaded (as opposed
          to volumes),
        - when building a stack of images/volume, a lesser number of
          gdcmHeader and gdcmFile instances should be used (hopefully
          accelerating things).
        - when building a stack of images/volumes, files which are not
          loadable (wrong path-filename, wrong permissions on existing file,
          or file not parsable by gdcm) are replaced with a black image
          in the stack (for the caller to notice the problem).

2003-06-03  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>